day4/wpapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wpapp-deploy
  labels:
    name: wpapp-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: wpapp-pod
  template:
    metadata:
      name: wpapp-pod
      labels:
        name: wpapp-pod
        dept: app
    spec:
      containers:
        - name: wpapp-container
          image: wordpress
          imagePullPolicy: IfNotPresent
          ports:
            - name: wpapp-port
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: wpapp-svc
  labels:
    name: wpapp-svc
spec:
  type: ClusterIP
  selector:
    name: wpapp-pod
  ports:
    - port: 80
      targetPort: wpapp-port
