day4/wpdb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wpdb-deploy
  labels:
    name: wpdb-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: wpdb-pod
  template:
    metadata:
      name: wpdb-pod
      labels:
        name: wpdb-pod
        dept: db
    spec:
      volumes:
        - name: wpdb-vol
          persistentVolumeClaim:
            claimName: data-pvc
      containers:
        - name: wpdb-container
          image: mysql
          imagePullPolicy: IfNotPresent
          ports:
            - name: wpdb-port
              containerPort: 3306
          volumeMounts:
            - name: wpdb-vol
              mountPath: /var/lib/mysql

---
apiVersion: v1
kind: Service
metadata:
  name: wpdb-svc
  labels:
    name: wpdb-svc
spec:
  type: ClusterIP
  selector:
    name: wpdb-pod
  ports:
    - port: 3306
      targetPort: wpdb-port
